Oh wait, I made a single mistake, let me just-

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
                 dificuldades em lições valiosas.
             </p>
             <p>
-                Mãe, você é muito mais do que uma mulher de ouro – é a personificação do amor, da coragem e da
+                Mãe, você é muito mais do que uma mulher de ouro - é a personificação do amor, da coragem e da
                 generosidade.
-                Sou eternamente grato(a) por cada ensinamento, por cada gesto de cuidado e por ter você sempre ao meu
+                Sou eternamente grato por cada ensinamento, por cada gesto de cuidado e por ter você sempre ao meu
                 lado.
             </p>
         </section>
